@@ -1,3 +1,14 @@
+0.X.X - XXXX-XX-XX
+==================
+
+  * Support the "new-style" VEP assertion format.  This avoids double-b64-
+    encoding and generally results in smaller assertions.
+  * Add vep.utils.get_assertion_info(), which parses useful information out
+    of an assertion without actually verifying it.
+  * Warn rather than fail if we can't find the CA certificates; this will
+    help new users get up and running more easily.
+
+
 0.2.1 - 2011-12-16
 ==================
 
